adds first project setup
* plans project setup

* approves project setup plan

* adds first project setup
